--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>JIF PIZZA POS v9.9 — Fixed Image Path</title>
+  <meta name="google-site-verification" content="n4Wv7IuNJWJbxxLgtvv4VkeOpazQ5FxxEDV4wxl9khI" />
 <link rel="icon" href="logo.png"/>
 
 <meta name="mobile-web-app-capable" content="yes">
